# parse-patrol

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  remote-mcp-server-setup.md  remote-mcp-server.py
.data/ztbeMA28ILtxhTRp_mnCXhJYSARd/: manifest.json
.data/ztbeMA28ILtxhTRp_mnCXhJYSARd/fc2yNy-pQG2J5fqcRs99tA/generate_c11_c12_dataset/run_calculations/6245/: input.gjf  input_smiles.txt  molecule.mol
.github/workflows/: lint.yml  test.yml
.pipelines/resources/: semantic-schema.md
.pipelines/scripts/: example_gaussian_parser.py  example_gaussian_parsing_log.md
.resources/: structure-schema.md
example_pipelines/: example_gaussian_parser.py  example_gaussian_parsing_log.md
paper/: draft.tex  git-contributions.md  ref.bib
pipelines/: gaussian_parsing_pipeline.py  structured_parsing_pipeline.py
src/cclib/: __main__.py  main.py
src/custom_gaussian/: __main__.py
src/gaussian/: __main__.py
src/iodata_parser/: __main__.py
src/nomad/: __main__.py
src/parse_patrol/: README.md  __init__.py  __main__.py  main.py
src/parse_patrol/databases/nomad/: __main__.py  utils.py
src/parse_patrol/parsers/ase/: __main__.py  stress_test_report.md  utils.py
src/parse_patrol/parsers/cclib/: __init__.py  __main__.py  utils.py
src/parse_patrol/parsers/gaussian/: __main__.py  utils.py
src/parse_patrol/parsers/iodata/: __main__.py  utils.py
src/read_doc_mcp/: server.py
src/read_doc_mcp/data_files/docs/: aitoolkit.md  index.md  javascript.js  todo.md  writing_guide.md
src/read_doc_mcp/data_files/docs/examples/: overview.md
src/read_doc_mcp/data_files/docs/examples/computational_data/: basics.md  faqs.md  metainfo.md  parser_plugins.md  schema_plugins.md
src/read_doc_mcp/data_files/docs/examples/experiment_data/: apm.md  em.md  mpes.md  nexus.md  opt.md  spm.md  xps.md
src/read_doc_mcp/data_files/docs/explanation/: architecture.md  basics.md  data.md  oasis.md  plugin_system.md  processing.md  workflows.md
src/read_doc_mcp/data_files/docs/howto/: overview.md
src/read_doc_mcp/data_files/docs/howto/customization/: base_sections.md  basics.md  elns.md  hdf5.md  mapping_parser.md  tabular.md  units.md  workflows.md
src/read_doc_mcp/data_files/docs/howto/customization/images/: ELNFileManager.webm  md-setup-workflow.webm  nested_workflow_one-entry.webm
src/read_doc_mcp/data_files/docs/howto/develop/: code.md  contrib.md  normalizing.md  release.md  search.md  setup.md
src/read_doc_mcp/data_files/docs/howto/graph-api/: basics.md  graph.drawio  graph.structure.md  misc.md  query.archive.md
src/read_doc_mcp/data_files/docs/howto/manage/: eln.md  upload.md
src/read_doc_mcp/data_files/docs/howto/manage/images/: eln-entry-from-gui.webm  (+1 more)
src/read_doc_mcp/data_files/docs/howto/oasis/: admin.md  configure.md  deploy.md  update.md
src/read_doc_mcp/data_files/docs/howto/plugins/: actions.md  apis.md  apps.md  example_uploads.md  normalizers.md  parsers.md  plugins.md  schema_packages.md
src/read_doc_mcp/data_files/docs/howto/programmatic/: api.md  archive_query.md  download.md  json_transformer.md  publish_python.md  pythonlib.md
src/read_doc_mcp/data_files/docs/reference/: annotations.md  basesections.md  cli.md  code_guidelines.md  config.md  glossary.md  parsers.md  plugins.md  tutorials.md
src/read_doc_mcp/data_files/docs/stylesheets/: extra.css
src/read_doc_mcp/data_files/docs/tutorial/: NOMAD_ELN.md  access_api.md  custom.md  develop_plugin.md  explore.md  nomad_repo.md  overview.md  upload_publish.md  workflows_projects.md
templates/: README.md  claude-desktop-mcp.json  neovim-mcp.json  vscode-mcp.json
test_files/gaussian/: frequency.chk  frequency.gjf
tests/: README.md  example_integration_test.py  g09.fchk  run_nomad_tests.py  test_modular_mcp.py  test_modular_mcp_old.py  test_nomad_integration.py
