[project]
name = "parse_patrol"
version = "0.1.0"
description = "Dual-mode chemistry parsing package: MCP discovery + direct Python imports for computational chemistry analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cclib>=1.8.1",
    "pydantic>=2.11.7", 
    "qc-iodata>=1.0.0a8",
    "requests>=2.32.5",
    "periodictable>=1.6.1",
    "zipfile-deflate64>=0.2.0",
]

[project.optional-dependencies]
mcp = [
    "mcp[cli]>=1.13.1",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0", 
    "black>=22.0.0",
    "ruff>=0.0.261",
]
all = [
    "parse_patrol[mcp,dev]"
]

[project.scripts]
parse-patrol-mcp = "parse_patrol.__main__:mcp.run"

[tool.hatch.build]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
